# SolarSystem

./: .gitignore  CMakeLists.txt  Planet.cpp  Planet.hpp  Render.cpp  Render.hpp  a.out  main.cpp  planeta.cpp  sphere.cpp  window.cpp
SolarSystem/: CMakeLists.txt  Planet.cpp  Planet.hpp  SolarSystem.cpp  SolarSystem.hpp  main.cpp  scenemultilight.cpp  scenemultilight.h
SolarSystem/shader/: multilight.frag  multilight.vert
include/: CMakeLists.txt  Camera.hpp  Planet.hpp  Render.hpp  SolarSystem.hpp  glslprogram.cpp  scene.cpp  scene.h  scenerunner.h  window.hpp
shaders/: fragment.glsl  vertex.glsl
